Updated Java deprecations